# stock-analysis

.devcontainer/: devcontainer.json
crew/: Dockerfile  README.md  company_info.md  dcf_calculations.md  dcf_interface.py  example_usage.py  final_analysis_report.md  financial_data.md  index.py  main.py  pyproject.toml  requirements.txt  sample_analysis_result.json  simple_test.py  test_json_format.py  test_llm_params.py  test_symbol_validation.py  test_system.py  test_ui_json.py  trace_nsive.py  ui.py
crew/src/crew/: dcf_crew.py  index.py
crew/src/crew/config/: agents.yaml  tasks.yaml
crew/src/crew/tools/: fmp.py
